reading from sql database

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ericsims/modbus",
   "dependencies": {
-    "express": "^4.12.4"
+    "express": "^4.12.4",
+    "sqlite3": "^3.0.8"
   }
 }
